Descargar contactos (teléfonos) activos de los participantes y mostrarlo en la aplicación en una nueva opción llamada 'Teléfonos'

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -250,6 +250,8 @@
                   android:screenOrientation="portrait" />
         <activity android:name="ni.org.ics.estudios.appmovil.muestreoanual.activities.ListParticipantesCasaActivity"
                   android:screenOrientation="portrait" />
+        <activity android:name="ni.org.ics.estudios.appmovil.muestreoanual.activities.ListPhonesActivity"
+                  android:screenOrientation="portrait" />
         <activity android:name="ni.org.ics.estudios.appmovil.muestreoanual.activities.MenuMuestreoAnualActivity"
                   android:screenOrientation="portrait" />
         <activity android:name="ni.org.ics.estudios.appmovil.muestreoanual.activities.MenuInfoActivity"
