Tomar coordenadas gps y datos de dirección en formulario de odk. Tmotivos de toma coordenadas: 1 ingreso, 2 cambio domicilio y 3 sin punto gps

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -316,6 +316,8 @@
                   android:screenOrientation="portrait" />
         <activity android:name="ni.org.ics.estudios.appmovil.muestreoanual.activities.NewReconDengue2018Activity"
                   android:screenOrientation="portrait" />
+        <activity android:name="ni.org.ics.estudios.appmovil.muestreoanual.activities.NewDatosCoordenadasActivity"
+                  android:screenOrientation="portrait" />
     </application>
 
 </manifest>
