Mejoras Se agrega funcionalidad para registrar obsequios durante los seguimientos

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -318,6 +318,8 @@
                   android:screenOrientation="portrait" />
         <activity android:name="ni.org.ics.estudios.appmovil.muestreoanual.activities.NewDatosCoordenadasActivity"
                   android:screenOrientation="portrait" />
+        <activity android:name="ni.org.ics.estudios.appmovil.cohortefamilia.activities.enterdata.NuevoObsequioActivity"
+                  android:screenOrientation="portrait" />
     </application>
 
 </manifest>
