--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -320,6 +320,8 @@
                   android:screenOrientation="portrait" />
         <activity android:name="ni.org.ics.estudios.appmovil.cohortefamilia.activities.enterdata.NuevoObsequioActivity"
                   android:screenOrientation="portrait" />
+        <activity android:name="ni.org.ics.estudios.appmovil.cohortefamilia.activities.enterdata.NuevoRecon18AniosActivity"
+                  android:screenOrientation="portrait" />
     </application>
 
 </manifest>
