Requerimiento muestras de superficie

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -322,6 +322,12 @@
                   android:screenOrientation="portrait" />
         <activity android:name="ni.org.ics.estudios.appmovil.cohortefamilia.activities.enterdata.NuevoRecon18AniosActivity"
                   android:screenOrientation="portrait" />
+        <activity android:name="ni.org.ics.estudios.appmovil.cohortefamilia.activities.ListaMuestrasSuperficieCasoActivity"
+                  android:screenOrientation="portrait" />
+        <activity android:name="ni.org.ics.estudios.appmovil.cohortefamilia.activities.enterdata.NuevaMuestrasSuperficieActivity"
+                  android:screenOrientation="portrait" />
+        <activity android:name=".cohortefamilia.activities.enterdata.NuevoTamizajeMxSuperficieActivity"
+                  android:screenOrientation="portrait" />
     </application>
 
 </manifest>
