--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -328,6 +328,8 @@
                   android:screenOrientation="portrait" />
         <activity android:name=".cohortefamilia.activities.enterdata.NuevoTamizajeMxSuperficieActivity"
                   android:screenOrientation="portrait" />
+        <activity android:name=".muestreoanual.activities.NewConFluUO1Activity"
+                  android:screenOrientation="portrait" />
     </application>
 
 </manifest>
