Requerimiento Vacunas UO1, se agrega datos UO1 al buscar participantes, se pone volumen por defecto 3 ml para muestras hisopado seguimiento.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -350,6 +350,12 @@
                   android:screenOrientation="portrait" />
         <activity android:name=".influenzauo1.activities.server.UploadAllUO1Activity"
                   android:screenOrientation="portrait" />
+        <activity android:name=".influenzauo1.activities.list.ListaVisitasVacunaUO1Activity"
+                  android:screenOrientation="portrait" />
+        <activity android:name=".influenzauo1.activities.enterdata.NuevaVisitaVacunaUO1Activity"
+                  android:screenOrientation="portrait" />
+        <activity android:name=".influenzauo1.activities.list.ListaMuestrasVacunasUO1Activity"
+                  android:screenOrientation="portrait" />
     </application>
 
 </manifest>
