--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -356,6 +356,10 @@
                   android:screenOrientation="portrait" />
         <activity android:name=".influenzauo1.activities.list.ListaMuestrasVacunasUO1Activity"
                   android:screenOrientation="portrait" />
+        <activity android:name=".influenzauo1.activities.enterdata.NuevoSintomasVisitaCasoUO1Activity"
+                  android:screenOrientation="portrait" />
+        <activity android:name=".influenzauo1.activities.list.ListaSintomasVisitaCasoUO1Activity"
+                  android:screenOrientation="portrait" />
     </application>
 
 </manifest>
