Versión 6.0.0.0 Consentimientos MA2022

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -446,6 +446,10 @@
                   android:screenOrientation="portrait" />
         <activity android:name=".covid19.activities.enterdata.NuevaMuestraAdicRojoEDTACitratoCovid19Activity"
                   android:screenOrientation="portrait" />
+        <activity android:name=".muestreoanual.activities.NuevoConsFluCEIRSActivity"
+                  android:screenOrientation="portrait" />
+        <activity android:name=".muestreoanual.activities.NuevoConsChfActivity"
+                  android:screenOrientation="portrait" />
     </application>
 
 </manifest>
