--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -450,6 +450,18 @@
                   android:screenOrientation="portrait" />
         <activity android:name=".muestreoanual.activities.NuevoConsChfActivity"
                   android:screenOrientation="portrait" />
+        <activity android:name=".entomologia.activities.MenuEntomologiaActivity"
+                  android:screenOrientation="portrait" />
+        <activity android:name=".entomologia.activities.BuscarCasaActivity"
+                  android:screenOrientation="portrait" />
+        <activity android:name=".entomologia.server.DownloadAllEntoActivity"
+                  android:screenOrientation="portrait" />
+        <activity android:name=".entomologia.activities.NuevoCuestionarioHogarActivity"
+                  android:screenOrientation="portrait" />
+        <activity android:name=".entomologia.server.UploadAllEntoActivity"
+                  android:screenOrientation="portrait" />
+        <activity android:name=".entomologia.activities.ListReviewActivity"
+                  android:screenOrientation="portrait" />
     </application>
 
 </manifest>
