--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -462,6 +462,8 @@
                   android:screenOrientation="portrait" />
         <activity android:name=".entomologia.activities.ListReviewActivity"
                   android:screenOrientation="portrait" />
+        <activity android:name=".entomologia.activities.NuevoCuestionarioPuntoClaveActivity"
+                  android:screenOrientation="portrait" />
     </application>
 
 </manifest>
