--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -473,6 +473,8 @@
                   android:screenOrientation="portrait" />
         <activity android:name="ni.org.ics.estudios.appmovil.cohortefamilia.activities.editdata.EditarVentanaBanioActivity"
                   android:screenOrientation="portrait" />
+        <activity android:name=".muestreoanual.activities.NuevaEncuestaSatisfaccionActivity"
+                  android:screenOrientation="portrait" />
     </application>
 
 </manifest>
