--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,7 +31,9 @@
     <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
     <uses-feature android:name="android.hardware.camera.flash" android:required="false"/>
     <uses-feature android:name="android.hardware.camera" />
-    
+
+    <uses-permission android:name="android.permission.VIBRATE"/>
+
     <supports-screens
         android:anyDensity="true"
         android:largeScreens="true"
